--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>menu</title>
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
 </head>
 
 <body>
+
     <header id="header">
         <a id="logo" href="">logo</a>
         <nav id="nav">
+            <button id="btn-mobile">Menu</button>
             <ul id="menu">
                 <li> <a href="/">Sobre</a> </li>
                 <li> <a href="/">Produtos</a> </li>
